--- a/style.css
+++ b/style.css
@@ -384,6 +384,19 @@ ul li label {
 /*admin page*/
 .adminBody{
   background-color: #7743DB;
+  overflow: hidden;
+}
+.webcontainer{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.tableDiv{
+  width: 70vw;
+  overflow: auto;
+  height: 60vh;
 }
 
 .adminTable{
@@ -391,6 +404,13 @@ ul li label {
   width: 100%;
   text-align: left;
   background-color: #3b3486;
+  border-radius: 10px;
+}
+
+.adminTable td{
+  text-align: center;
+  color: #fff;
+  height: 3vh;
 }
 
 .adminTable tr:nth-child(even){
@@ -399,7 +419,9 @@ ul li label {
 
 .adminTable tr{
   border:solid 1px black;
-  color: #fff;
+  color: #ffe9b1;
+  text-align: center;
+  height: 6vh;
 }
 
 .deleteButton{
