--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ ul li label {
 
 /*faq admin*/
 .questionContainer{
-  margin: 15px;
+  margin: 1 5px;
 }
 
 .questionContainer p{
@@ -509,6 +509,25 @@ ul li label {
   border-radius: 3px;
 }
 
+.sendForm{
+  display: flex;
+  justify-content: center;
+}
+
+.sendForm button{
+  background-color: #3b3486;
+  color: #ffe9b1;
+  font-size: 1em;
+  border: none;
+  height: 6vh;
+  border-radius: 3px;
+  margin: 0 0 0 10px;
+}
+
+.sendForm button:hover{
+  color: #3DC6E9;
+}
+
 .answerFAQContainer{
   display: flex;
   flex-flow: column;
@@ -519,4 +538,39 @@ ul li label {
   color: #ffe9b1;
   font-size: 2em;
   margin: 45px 0 60px 0;
+}
+
+.faqContainerDiv{
+  display: grid;
+  justify-content: center;
+}
+
+.dropDownButton{
+  background-color: #3b3486;
+  color: #ffe9b1;
+  font-size: 1.7em;
+  border: none;
+  height: 6vh;
+  border-radius: 3px;
+  width: 50vw;
+  margin: 10px 0 0 0;
+}
+
+.active, .dropDownButton:hover{
+  color: #3DC6E9;
+}
+
+.faqDiv{
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+  width: 48vw;
+
+}
+
+.questionSendContainer{
+  display: grid;
+  justify-content: center;
+  margin: 30px;
 }
