--- a/style.css
+++ b/style.css
@@ -574,3 +574,10 @@ ul li label {
   justify-content: center;
   margin: 30px;
 }
+
+.circle{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: rebeccapurple;
+}
